# rs-rng

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  rng.rs
